// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Phone should render 1`] = `
<label
  class="input default left"
>
  <div
    class="prependedContainer default"
  >
    <span
      aria-label="su-phone"
      class="su-phone icon default"
    />
  </div>
  <input
    type="tel"
    value=""
  />
</label>
`;

exports[`Phone should render error 1`] = `
<label
  class="input default left error"
>
  <div
    class="prependedContainer default"
  >
    <span
      aria-label="su-phone"
      class="su-phone icon default"
    />
  </div>
  <input
    type="tel"
    value=""
  />
</label>
`;

exports[`Phone should render null value as empty string 1`] = `
<label
  class="input default left"
>
  <div
    class="prependedContainer default"
  >
    <span
      aria-label="su-phone"
      class="su-phone icon default"
    />
  </div>
  <input
    type="tel"
    value=""
  />
</label>
`;

exports[`Phone should render with placeholder 1`] = `
<label
  class="input default left"
>
  <div
    class="prependedContainer default"
  >
    <span
      aria-label="su-phone"
      class="su-phone icon default"
    />
  </div>
  <input
    placeholder="My placeholder"
    type="tel"
    value=""
  />
</label>
`;

exports[`Phone should render with value 1`] = `
<label
  class="input default left"
>
  <div
    class="prependedContainer default"
  >
    <span
      aria-label="su-phone"
      class="su-phone clickable icon default iconClickable"
      role="button"
      tabindex="0"
    />
  </div>
  <input
    type="tel"
    value="test@test.com"
  />
</label>
`;
